--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "concurrently": "^5.0.1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
+    "webpack-merge": "^4.2.2",
     "webpack-node-externals": "^1.7.2"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "express": "^4.17.1",
+    "express-http-proxy": "^1.6.0",
+    "morgan": "^1.9.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
