--- a/package.json
+++ b/package.json
@@ -17,7 +17,10 @@
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-react": "^7.7.4",
     "concurrently": "^5.0.1",
+    "css-loader": "^3.4.0",
     "http-proxy-middleware": "^0.20.0",
+    "isomorphic-style-loader": "^5.1.0",
+    "style-loader": "^1.1.1",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10",
     "webpack-merge": "^4.2.2",
