--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@babel/preset-react": "^7.7.4",
     "concurrently": "^5.0.1",
     "css-loader": "^3.4.0",
+    "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.20.0",
     "isomorphic-style-loader": "^5.1.0",
     "style-loader": "^1.1.1",
