--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^0.19.0",
     "babel-loader": "^8.0.6",
     "express": "^4.17.1",
+    "hoist-non-react-statics": "^3.3.1",
     "morgan": "^1.9.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
